<resources>
    <string name="app_name">ShopMap</string>
    <string name="cads">Cadastrar</string>
    <string name="Log">Login</string>
    <string name="esq">Esqueceu a senha?</string>
    <string name="out">Outras Formas de login</string>
    <string name="titleCadastro">Cadastrar</string>
    <string name="Ter">Privacy policy - Terms of Use</string>
    <string name="perfil">Perfil</string>
    <string name="paginaInicial">pagina</string>
    <string name="favoritos">Favoritos</string>
    <string name="cupons">Cupons</string>
    <string name="configuracao">Configurações</string>
    <string name="sair">Sair</string>
    <string name="nome">Entrar</string>
    <string name="sobrenome"></string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="email">Email</string>
    <string name="dataNascimento">Data de Nascimento</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>