<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whites"
    tools:context=".FormCadastro">

    <ImageView
        android:id="@+id/backPage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icbaseline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/titleCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCadastro"
        android:textSize="40dp"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/nomeCompleto"
        style="@style/campo_text"
        android:layout_marginTop="55dp"
        android:hint="@string/nomeCompleto"
        android:inputType="text"
        android:textColorHint="#7A2B0B63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCadastro" />

    <EditText
        android:id="@+id/nomeEmail"
        style="@style/campo_text"
        android:layout_marginTop="35dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#7A2B0B63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeCompleto" />

    <EditText
        android:id="@+id/dataNascimento"
        style="@style/campo_text"
        android:layout_marginTop="35dp"
        android:hint="@string/dataNascimento"
        android:inputType="date"
        android:textColorHint="#7A2B0B63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEmail" />

    <EditText
        android:id="@+id/senha"
        style="@style/campo_text"
        android:layout_marginTop="35dp"
        android:drawableRight="@drawable/iceye"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="#7A2B0B63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNascimento" />

    <EditText
        android:id="@+id/senhaConfirmar"
        style="@style/campo_text"
        android:layout_marginTop="35dp"
        android:drawableRight="@drawable/iceye"
        android:hint="@string/confirmarSenha"
        android:inputType="textPassword"
        android:textColorHint="#7A2B0B63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:id="@+id/cadastrar"
        android:text="@string/titleCadastro"
        android:textSize="20dp"
        android:width="170dp"
        app:layout_constraintTop_toBottomOf="@+id/senhaConfirmar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>